<resources>
    <string name="app_name">User Profile</string>
    <string name="splash_vector_description">Splash picture</string>
    <string name="splash_title">User Profile Kotlin</string>
    <string name="profile_image_description">Profile image</string>
    <string name="open_gallery_btn_text">Open Picture Gallery</string>
    <string name="firstName_input_hint">First Name</string>
    <string name="lastName_input_hint">Last Name</string>
    <string name="description_input_hint">Description</string>
    <string name="confirm_btn_text">Confirm</string>
    <string name="name">%1$s %2$s</string>

</resources>
